--- a/projects/amlo_mex/amlo_page.qmd
+++ b/projects/amlo_mex/amlo_page.qmd
@@ -1,12 +1,12 @@
 ---
-title: "How MORENA Came to Control Mexico"
+title: "How MORENA Came to Control Mexico (page under construction)"
 subtitle: "How AMLO's MORENA Took Over Mexican Politics"
 format: html
 toc: false # Table of contents
 execute: 
   warning: false
   message: false
-  echo: false
+  echo: true
 ---
 
 # Results of the 2024 Election In Mexico
@@ -15,11 +15,6 @@ execute:
 # Libraries used
 library(tidyverse)
 library(ggparliament)
-library(gganimate)
-library(janitor)
-library(readxl)
-library(patchwork)
-library(ggiraph)
 ```
 
 ```{r}
@@ -36,7 +31,6 @@ party_order <- list(
   "PES",         # Far-right
   "Other_Parties" # Other/Unknown
 )
-
 
 # Party colors asignment
 party_colors <- list(
@@ -65,12 +59,17 @@ coalition_colors <- list(
 )
 ```
 
+Data collected from IPU (2024). International Parliamentary Union. Retrieved from: [https://data.ipu.org](https://data.ipu.org/parliament/MX/MX-LC01/)
+
 ```{r}
 # Importing the congressional data
 deputies <- read.csv("deputies_00_24.csv") |> 
   mutate(party = factor(party, levels = party_order)) |> 
   arrange(party) |> 
   rename(seats = elected)
+
+head(deputies)
+
 senate <- read.csv("senate_00_24.csv") |> 
   mutate(party = factor(party, levels = party_order)) |> 
   arrange(party) |> 
@@ -127,31 +126,3 @@ senate2024 |>
 ```
 :::
 :::
-
-```{r}
-# Interactive deputies plot
-# p1_interactive <- deputies2024 |>
-#   ggplot(aes(x = x, y = y)) +
-#   geom_parliament_seats_interactive(
-#     size = 7, 
-#     aes(color = party, tooltip = party, data_id = party)  # Add tooltip and data_id
-#   ) + 
-#   scale_colour_manual(values = coalition_colors) +  # coalition colors
-#   theme_void() +
-#   theme(legend.position = "null")
-
-# # Interactive senate plot
-# p2_interactive <- senate2024 |>
-#   ggplot(aes(x = x, y = y)) +
-#   geom_parliament_seats_interactive(
-#     size = 14, 
-#     aes(color = party, tooltip = party, data_id = party)  # Add tooltip and data_id
-#   ) +
-#   scale_colour_manual(values = coalition_colors) +  # coalition colors
-#   theme_void() +
-#   theme(legend.position = "null")
-# 
-# # Render interactive plots
-# girafe(ggobj = p1_interactive)
-# girafe(ggobj = p2_interactive)
-```
