--- a/tidytuesday/tidytuesday.qmd
+++ b/tidytuesday/tidytuesday.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Tidytuesday Adventures"
+title: ""
 #subtitle: ""
-#date: "Nov 26, 2024"
+#date: ""
 #author: "Kevin Valdivia"
 format: html
 toc: true # Table of contents
@@ -28,24 +28,32 @@ execute:
 }
 </style>
 ```
--   **Python** <a href="../python_projects/synthetic_diabetes_data.qmd" class="chip-link">Diabetes</a>
+
+
+# Vizualizations With Python 
+
+### December '24
+
+- **December 20, 2024** <a href="../python_projects/synthetic_diabetes_data.qmd" class="chip-link">Synthetic Data: Diabetes ⚕💉️</a>
+
+# Tidytuesdays With R
 The following is a list of some of the TidyTuesday projects I have completed. I started by attending some of the TidyTuesday sessions led by Professor [Jo Hardin](https://hardin47.netlify.app) and collaborating with other peers. We worked together to learn more about the Tidyverse. I don’t publish my TidyTuesday `.qmd` files every week because I don’t always have time, but I will try my best to share them when I can.
 
 Here is the [**official TidyTuesday repo**](https://github.com/rfordatascience/tidytuesday)
 
 
-## November '24
+### November '24
 
 -   **November 12, 2024** <a href="country_code.qmd" class="chip-link">ISO Country Codes 🍭🌐</a>
 
-## October '24
+### October '24
 
 -   **October 29, 2024** <a href="monsters.qmd" class="chip-link">Monster Movies ⚰️👻</a>
 -   **October 22, 2024**: <a href="CIA_Factbook/cia_factbook.qmd" class="chip-link">CIA Country Comparison Indicators 📊🌍</a>
 -   **October 8, 2024**: <a href="biodiversity_national_parks.qmd" class="chip-link">National Park Species 🌲🦉</a>
 -   **October 1, 2024**: <a href="chess_matches.qmd" class="chip-link">Chess Games ♟️🎯</a>
 
-## September '24
+### September '24
 
 -   **September 17, 2024**: <a href="shakespeare_words.qmd" class="chip-link">Shakespeare Dialogue 🎭✒️</a>
 -   **September 10, 2024**: <a href="school_income.qmd" class="chip-link">Diversity & Student Outcomes 📚🌍</a>
